[metadata]
name = jupyter-cache
version = attr: jupyter_cache.__version__
description = A defined interface for working with a cache of jupyter notebooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/executablebooks/jupyter-cache
author = Chris Sewell
author_email = chrisj_sewell@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords = sphinx extension material design web components
project_urls =
    Documentation = https://jupyter-cache.readthedocs.io

[options]
packages = find:
install_requires =
    attrs
    importlib-metadata
    nbclient>=0.2,<0.6
    nbdime
    nbformat
    sqlalchemy>=1.3.12,<1.5
python_requires = ~=3.6
include_package_data = True
zip_safe = True

[options.entry_points]
console_scripts =
    jcache = jupyter_cache.cli.commands.cmd_main:jcache
jcache.executors =
    local-serial = jupyter_cache.executors.basic:JupyterExecutorLocalSerial
    temp-serial = jupyter_cache.executors.basic:JupyterExecutorTempSerial
jcache.readers =
    nbformat = jupyter_cache.readers:nbf_reader
    jupytext = jupyter_cache.readers:jupytext_reader

[options.extras_require]
cli =
    click
    click-completion
    click-log
    pyyaml
    tabulate
code_style =
    pre-commit~=2.12
rtd =
    myst-nb~=0.12.3
    sphinx-book-theme~=0.1.1
    sphinx-copybutton
testing =
    coverage
    ipykernel
    jupytext
    matplotlib
    nbformat>=5.1
    numpy
    pandas
    pytest>=3.6,<4
    pytest-cov
    pytest-regressions
    sympy

[options.packages.find]
exclude =
    test*

[mypy]
show_error_codes = True
warn_unused_ignores = True
warn_redundant_casts = True
no_implicit_optional = True
strict_equality = True

[flake8]
max-line-length = 100
extend-ignore = E203
